--- a/app/src/main/res/layout/custom_map_popup.xml
+++ b/app/src/main/res/layout/custom_map_popup.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="250dp"
+    android:layout_width="200dp"
     android:layout_height="200dp"
     android:padding="5dp"
     android:background="@drawable/custom_border"
@@ -129,7 +129,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="10dp"
                     android:textColor="@color/maincolor"
-                    android:textSize="10dp"
+                    android:textSize="8dp"
                     android:gravity="center"
                     android:text="occupied"/>
 
@@ -198,7 +198,7 @@
 0
             <TextView
                 android:id="@+id/period"
-                android:text="Period"
+                android:text="Periods"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.6"
