--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorFawn">#E2BF71</color>
     <color name="maincolor">#535454</color>
     <color name="snow">#FAFAFA</color>
+    <color name="grey">#A0A0A0</color>
 </resources>
