--- a/app/src/main/res/layout/custom_map_popup.xml
+++ b/app/src/main/res/layout/custom_map_popup.xml
@@ -4,8 +4,7 @@
     android:layout_width="250dp"
     android:layout_height="200dp"
     android:padding="5dp"
-    android:background="@drawable/custom_border"
-    android:layout_gravity="center">
+    android:background="@drawable/custom_border">
 
 
     <LinearLayout
@@ -168,7 +167,7 @@
                 android:layout_width="0dp"
                 android:textSize="14dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="0.5"
                 android:textColor="@color/maincolor"
                 android:gravity="center"/>
 
@@ -178,7 +177,7 @@
                 android:layout_width="0dp"
                 android:textSize="14dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="0.5"
                 android:textColor="@color/maincolor"
                 android:gravity="center"/>
 
@@ -196,22 +195,21 @@
                 android:text="Periods"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.6"
+                android:layout_weight="0.5"
                 android:textSize="14dp"
                 android:textColor="@color/maincolor"
                 android:gravity="center"/>
 
             <Button
-                android:id="@+id/slots"
-                android:layout_width="10dp"
-                android:layout_height="20dp"
-                android:layout_weight="0.4"
-                android:background="@null"
+                android:id="@+id/go"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
                 android:layout_marginRight="14dp"
                 android:textSize="14dp"
-                android:text="GO"
-                android:gravity="center_horizontal"
-                android:textColor="@color/maincolor" />
+                android:background="@null"
+                android:textColor="@color/maincolor"
+                android:gravity="center"/>
 
         </LinearLayout>
 
