Still on directions and polylines.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="maincolor">#535454</color>
     <color name="snow">#FAFAFA</color>
     <color name="grey">#A0A0A0</color>
+    <color name="lightblue">#8EC7FF</color>
 </resources>
