--- a/app/src/main/res/layout/custom_endlocation_marker.xml
+++ b/app/src/main/res/layout/custom_endlocation_marker.xml
@@ -3,10 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="150dp"
-    android:layout_height="100dp"
-    android:padding="5dp"
-    android:background="@drawable/custom_border">
+    android:layout_width="100dp"
+    android:layout_height="80dp"
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/title"
