Google Maps trip development.

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -4,23 +4,68 @@
     android:layout_height="match_parent"
     tools:context=".Maps" >
 
-    <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
+    <fragment
         android:id="@+id/map"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:scrollbars="vertical"
-        class="com.google.android.gms.maps.SupportMapFragment"/>
-
-    <ImageButton
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:src="@drawable/location"
-        android:layout_alignParentLeft="true"
+        class="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:id="@+id/btn_reset_map"/>
+        android:elevation="10dp"
+        android:layout_gravity="bottom"
+        android:background="@drawable/custom_border"
+        android:id="@+id/relLayout1">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ic_search"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/search"/>
+
+        <AutoCompleteTextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@id/ic_search"
+            android:textSize="15dp"
+            android:paddingLeft="10dp"
+            android:textColor="@color/maincolor"
+            android:id="@+id/input_search"
+            android:background="@null"
+            android:textColorHint="@color/maincolor"
+            android:hint="Enter Address, City or Zip Code"
+            android:imeOptions="actionSearch"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:elevation="10dp"
+        android:gravity="left"
+        android:id="@+id/relLayout2">
+
+        <Button
+            android:id="@+id/btReset"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
+            android:background="@color/transp_snow"
+            android:text="reset"
+            android:textColor="@color/maincolor"/>
+
+    </RelativeLayout>
+
+
 
 </FrameLayout>
