--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="grey">#A0A0A0</color>
     <color name="lightblue">#8EC7FF</color>
     <color name="transp_snow">#E6FAFAFA</color>
+    <color name="mainBlue">#2c87c9</color>
+    <color name="buttonGrey">#e1e1e2</color>
 </resources>
