--- a/app/src/main/res/drawable/custom_main_button.xml
+++ b/app/src/main/res/drawable/custom_main_button.xml
@@ -3,6 +3,6 @@
     android:layout_height="wrap_content" android:layout_width="wrap_content">
     <corners android:radius="10dp"/>
     <padding android:left="10dp" android:right="10dp" android:top="10dp" android:bottom="10dp"/>
-    <stroke android:width="1dp" android:color="#CCCCCC"/>
-    <solid android:color="@color/transp_snow"></solid>
+    <stroke android:width="1dp" android:color="@color/snow"/>
+    <solid android:color="@color/mainBlue"></solid>
 </shape>
