--- a/app/src/main/res/drawable/custom_pop_background.xml
+++ b/app/src/main/res/drawable/custom_pop_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle"
     android:layout_height="wrap_content" android:layout_width="wrap_content">
-    <corners android:radius="10dp"/>
+    <corners android:radius="20dp"/>
     <padding android:left="10dp" android:right="10dp" android:top="10dp" android:bottom="10dp"/>
-    <stroke android:width="1dp" android:color="#CCCCCC"/>
-    <solid android:color="@color/transp_snow"></solid>
+    <stroke android:width="0.5dp" android:color="@color/maincolor"/>
+    <solid android:color="@color/snow"></solid>
 </shape>
