--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,11 @@
         <item name="colorPrimary">@color/snow</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:statusBarColor">@color/mainBlue</item>
+        <item name="android:textCursorDrawable">@color/mainBlue</item>
+        <item name="colorControlNormal">@color/mainBlue</item>
+        <item name="colorControlActivated">@color/mainBlue</item>
+        <item name="colorControlHighlight">@color/mainBlue</item>
     </style>
 
     <style name="TextAppearance.AppCompat.Widget.ActionBar.Title." parent="@android:style/TextAppearance">
