--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -62,31 +62,21 @@
             android:background="@drawable/custom_border"
             android:id="@+id/locationLayout">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/ic_search"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:src="@drawable/search"/>
+            <!--<ImageView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:id="@+id/ic_search"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:layout_marginLeft="10dp"-->
+                <!--android:src="@drawable/search"/>-->
 
-            <!--<AutoCompleteTextView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_toRightOf="@id/ic_search"-->
-                <!--android:textSize="16dp"-->
-                <!--android:paddingLeft="10dp"-->
-                <!--android:textColor="@color/maincolor"-->
-                <!--android:id="@+id/input_search"-->
-                <!--android:background="@null"-->
-                <!--android:textColorHint="@color/maincolor"-->
-                <!--android:hint="Enter Address, City or Zip Code"-->
-                <!--android:imeOptions="actionSearch"/>-->
+
+            <!--android:layout_toRightOf="@id/ic_search"-->
+
             <fragment
                 android:id="@+id/input_search"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_toRightOf="@id/ic_search"
                 android:textSize="16dp"
                 android:paddingLeft="10dp"
                 android:textColor="@color/maincolor"
@@ -161,24 +151,40 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="bottom|right"
-        android:paddingBottom="15dp"
-        android:paddingRight="15dp">
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingBottom="15dp">
+
+        <Button
+            android:id="@+id/photo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="0dp"
+            android:background="@drawable/custom_secondary_button"
+            android:elevation="5dp"
+            android:onClick="goToMap"
+            android:text="Photo" />
 
         <Button
             android:id="@+id/google_map"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginBottom="0dp"
             android:background="@drawable/custom_secondary_button"
-            android:onClick="goToMap"
             android:elevation="5dp"
+            android:onClick="goToMap"
             android:text="Map" />
 
-    </LinearLayout>
-
+    </RelativeLayout>
 
 </LinearLayout>
