--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -62,17 +62,6 @@
             android:background="@drawable/custom_border"
             android:id="@+id/locationLayout">
 
-            <!--<ImageView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/ic_search"-->
-                <!--android:layout_centerVertical="true"-->
-                <!--android:layout_marginLeft="10dp"-->
-                <!--android:src="@drawable/search"/>-->
-
-
-            <!--android:layout_toRightOf="@id/ic_search"-->
-
             <fragment
                 android:id="@+id/input_search"
                 android:layout_width="match_parent"
@@ -84,7 +73,7 @@
                 android:textColorHint="@color/maincolor"
                 android:hint="Enter Address, City or Zip Code"
                 android:imeOptions="actionSearch"
-                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>
+                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>
 
         </RelativeLayout>
 
