--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="lightblue">#8EC7FF</color>
     <color name="transp_snow">#E6FAFAFA</color>
     <color name="mainBlue">#2c87c9</color>
+    <color name="secundaryColor">#4a85b0</color>
     <color name="buttonGrey">#e1e1e2</color>
     <color name="circleInsideBlue">#80e5e6ee</color>
     <color name="circleStrokeBlue">#5e98c3</color>
